examples/test/testpolicy17887.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17887
  namespace: namespace403
spec:
  podSelector:
    matchLabels:
      key23: value37
      key39: value36
      key26: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value9
          key1: value26
      podSelector:
        matchLabels:
          key0: value19
          key17: value9
          key22: value22
